# PPL_internship_task

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  BONUS_FEATURES.md  Backend Task - AI Quizzer.txt  CONTEXT.md  CURSOR.md  DEL_QUIZ.ps1  DEPLOYMENT.md  Dockerfile  Makefile  PRD.md  README.md  TASKS.md  TEST.md  alembic.ini  complete-test.ps1  create_test_user.py  docker-compose.yml  env.example  local.env  pyproject.toml  quiz-app.html  render.yaml  requirements.txt  start.py  start.sh  test-live.ps1  test_smtp.py  upgraded_index.html
.cursor/rules/: customrule1.mdc
.github/workflows/: ci.yml
.postman/: quiz-service.postman_collection.json
app/: main.py
app/api/: adaptive.py  auth.py  health.py  hints.py  history.py  leaderboard.py  quizzes.py
app/core/: config.py  deps.py  errors.py  logging.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_initial_migration.py  002_add_leaderboard.py
app/models/: __init__.py  answer.py  base.py  evaluation.py  leaderboard.py  question.py  quiz.py  retry.py  submission.py  user.py
app/schemas/: auth.py  common.py  history.py  leaderboard.py  question.py  quiz.py  submission.py
app/services/: adaptive.py  cache.py  datetime.py  grading.py  leaderboard.py  notifications.py
app/services/ai/: gemini_provider.py  mock.py  openai_provider.py  provider.py
app/static/: postman_collection.json
docs/: Important_Files.md  codeindex.json  docker_local_setup.md
docs/api/: README.md
docs/examples/: README.md
docs/guides/: authentication.md
docs/schemas/: README.md
frontend/: index.html
postman/: quiz-service.postman_collection.json
scripts/: create_schema.sql  generate_interview_docs.py  init-test-db.sql
tests/: test_adaptive_policy.py  test_auth.py  test_health.py  test_hint_policy.py  test_history_filters.py  test_quiz_generation.py  test_submit_and_evaluate.py
